# Warp-Plus

./: .gitignore  LICENSE  README.md  index.html  latest.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  email.rs  mcp_rules.rs  mod.rs  registry.rs  warp_token.rs
src/components/: Login.css  Login.tsx  MCPManager.css  MCPManager.tsx  TempMail.css  TempMail.tsx  Unlimited.css  Unlimited.tsx  UpdateChecker.tsx  WarpLogin.css  WarpLogin.tsx  WarpUUID.css  WarpUUID.tsx
